initialize Message Processor project structure and extract shared models to class library
- Moved ServerStatistics and ServerStatisticsConfig to a shared class library for reuse across multiple projects.

--- a/ServerMonitoringSystem/ServerMonitoringSystem.MessagePublisher.csproj
+++ b/ServerMonitoringSystem/ServerMonitoringSystem.MessagePublisher.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MessagingLibrary\MessagingLibrary.csproj" />
+    <ProjectReference Include="..\ServerMonitoringSystem.Shared\ServerMonitoringSystem.Shared.csproj" />
   </ItemGroup>
 
   <ItemGroup>
