--- a/ServerMonitoringSystem.MessageProcessor/ServerMonitoringSystem.MessageProcessor.csproj
+++ b/ServerMonitoringSystem.MessageProcessor/ServerMonitoringSystem.MessageProcessor.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="9.0.4" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.4" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.4" />
     <PackageReference Include="MongoDB.Driver" Version="3.4.0" />
