Moved MongoDB repository to Infrastructure project and externalized configs to appsettings.

--- a/ServerMonitoringSystem.MessageProcessor/appsettings.json
+++ b/ServerMonitoringSystem.MessageProcessor/appsettings.json
@@ -1,7 +1,4 @@
 {
-  "ConnectionStrings": {
-    "MongoDbConnection": "mongodb+srv://mahmoudbmiqdad:mahmoud123@cluster0.bx8augs.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
-  },
 
   "AnomalyDetectionConfig": {
     "MemoryUsageAnomalyThresholdPercentage": 0.4,
@@ -12,5 +9,11 @@
 
   "SignalRConfig": {
     "SignalRUrl": "https://localhost:7271/hub/alerts"
+  },
+
+  "MongoDbSettings": {
+    "MongoDbConnection": "mongodb+srv://mahmoudbmiqdad:mahmoud123@cluster0.bx8augs.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0",
+    "DatabaseName": "ServerMonitoring",
+    "CollectionName": "Statistics"
   }
 }
