replaced appsettings.json with environment variable configuration for MessageProcessor.

--- a/ServerMonitoringSystem.MessageProcessor/.env
+++ b/ServerMonitoringSystem.MessageProcessor/.env
@@ -5,12 +5,19 @@ MEMORY_USAGE_THRESHOLD=0.8
 CPU_USAGE_THRESHOLD=0.9
 
 # MongoDB Settings
-MONGODB_CONNECTION=mongodb://your-mongo-host:27017
-MONGODB_DATABASE=ServerMonitoringDb
-MONGODB_COLLECTION=ServerStatistics
+MONGODB_CONNECTION=mongodb+srv://mahmoudbmiqdad:mahmoud123@cluster0.bx8augs.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_DATABASE=ServerMonitoring
+MONGODB_COLLECTION=Statistics
 
 # SignalR Settings
 SIGNALR_URL=https://localhost:7271/hub/alerts
 
 # Server Identifier
 SERVER_IDENTIFIER=Server1
+
+
+# RabbitMQ Settings
+RABBITMQ_HOST=rabbitmq
+RABBITMQ_EXCHANGE=ServerExchange
+RABBITMQ_QUEUE=ServerStatsQueue
+RABBITMQ_ROUTING_KEY=ServerStatistics.*
