Add production-ready Dockerfile for SignalR Hub with multi-stage build.

--- a/ServerMonitoringSystem.MessageProcessor/.env
+++ b/ServerMonitoringSystem.MessageProcessor/.env
@@ -10,7 +10,7 @@ MONGODB_DATABASE=ServerMonitoring
 MONGODB_COLLECTION=Statistics
 
 # SignalR Settings
-SIGNALR_URL=https://localhost:7271/hub/alerts
+SIGNALR_URL=http://signalr-hub:8080/hub/alerts
 
 # Server Identifier
 SERVER_IDENTIFIER=Server1
