--- a/ServerMonitoringSystem/.env
+++ b/ServerMonitoringSystem/.env
@@ -3,3 +3,7 @@ RABBITMQ_EXCHANGE=ServerExchange
 RABBITMQ_EXCHANGE_TYPE=topic
 SAMPLING_INTERVAL_SECONDS=20
 SERVER_IDENTIFIER=linux-docker-1
+
+RABBITMQ_PORT=5672
+RABBITMQ_USERNAME=guest
+RABBITMQ_PASSWORD=guest
