Refactor configuration loading: moved static settings to appsettings, kept dynamic ones in .env, added fallback logic with exceptions.

--- a/ServerMonitoringSystem.MessageProcessor/.env
+++ b/ServerMonitoringSystem.MessageProcessor/.env
@@ -1,23 +1,10 @@
-﻿# Anomaly Detection Config
-MEMORY_ANOMALY_THRESHOLD=0.4
-CPU_ANOMALY_THRESHOLD=0.5
-MEMORY_USAGE_THRESHOLD=0.8
-CPU_USAGE_THRESHOLD=0.9
-
-# MongoDB Settings
+﻿# MongoDB
 MONGODB_CONNECTION=mongodb+srv://mahmoudbmiqdad:mahmoud123@cluster0.bx8augs.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-MONGODB_DATABASE=ServerMonitoring
-MONGODB_COLLECTION=Statistics
+
 
 # SignalR Settings
 SIGNALR_URL=http://signalr-hub:8080/hub/alerts
 
-# Server Identifier
-SERVER_IDENTIFIER=Server1
-
 
 # RabbitMQ Settings
 RABBITMQ_HOST=rabbitmq
-RABBITMQ_EXCHANGE=ServerExchange
-RABBITMQ_QUEUE=ServerStatsQueue
-RABBITMQ_ROUTING_KEY=ServerStatistics.*
