--- a/ServerMonitoringSystem.MessageProcessor/ServerMonitoringSystem.MessageProcessor.csproj
+++ b/ServerMonitoringSystem.MessageProcessor/ServerMonitoringSystem.MessageProcessor.csproj
@@ -23,4 +23,10 @@
     <ProjectReference Include="..\ServerMonitoringSystem.Shared\ServerMonitoringSystem.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
