--- a/ServerMonitoringSystem/ServerMonitoringSystem.MessagePublisher.csproj
+++ b/ServerMonitoringSystem/ServerMonitoringSystem.MessagePublisher.csproj
@@ -21,4 +21,10 @@
     <ProjectReference Include="..\ServerMonitoringSystem.Shared\ServerMonitoringSystem.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
