--- a/MessagingLibrary/MessagingLibrary.csproj
+++ b/MessagingLibrary/MessagingLibrary.csproj
@@ -12,4 +12,8 @@
 	  <PackageReference Include="RabbitMQ.Client" Version="7.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ServerMonitoringSystem.Shared\ServerMonitoringSystem.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
