--- a/ServerMonitoringSystem/appsettings.json
+++ b/ServerMonitoringSystem/appsettings.json
@@ -1,8 +1,11 @@
 {
   "RabbitMqConfig": {
-    "Host": "rabbitmq",
+    "RabbitHost": "rabbitmq",
     "Exchange": "ServerExchange",
-    "ExchangeType": "topic"
+    "ExchangeType": "topic",
+    "RabbitPort": "5672",
+    "RabbitUsername": "guest",
+    "RabbitPassword": "guest"
   },
   "ServerConfig": {
     "SamplingIntervalSeconds": 20,
